[package]
name = "backoff_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand={version="0.8.5"}
plotters = {git="https://github.com/plot-rs/plotters"}

[lib]
name = "backoff_benchmark"
path = "src/lib.rs"